--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,17 @@ body {
   opacity: 0.8;
 }
 
+.note {
+  text-align: center;
+}
+
+.note_github_link {
+  text-decoration: none;
+  font-weight: bolder;
+  cursor: pointer;
+  color: #fff;
+}
+
 .article__paragraph {
   margin-bottom: 0.6em;
   line-height: 1.5;
